--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
 ollama
 langchain
 chromadb
+openai-whisper 
+sounddevice
+pyttsx3
+customtkinter
+groqflow>=0.3.0
+numpy>=1.20.0,<2.0.0
+pybind11>=2.12.0
